Let's use Java 17 for smaller backport patches.